--- a/pay.html
+++ b/pay.html
@@ -16,9 +16,9 @@
         <input type="hidden" name="currency" value="INR" />
         <input type="hidden" name="debitorcredit" value="" />
         <input type="hidden" name="merchantIdentifier" value="236e6378d80e492f95283a119417ef01" />
-        <input type="hidden" name="merchantIpAddress" value="127.0.0.1" />
+        <input type="hidden" name="merchantIpAddress" value="101.53.144.53" />
         <input type="hidden" name="mode" value="0" />
-        <input type="hidden" name="orderId" value="ZAAK1761549419836" />
+        <input type="hidden" name="orderId" value="ZAAK1761555665263" />
         <input type="hidden" name="product1Description" value="" />
         <input type="hidden" name="product2Description" value="" />
         <input type="hidden" name="product3Description" value="" />
@@ -37,10 +37,10 @@
         <input type="hidden" name="shipToState" value="" />
         <input type="hidden" name="showMobile" value="" />
         <input type="hidden" name="txnDate" value="" />
-        <input type="hidden" name="txnType" value="" />
+        <input type="hidden" name="txnType" value="1" />
         <input type="hidden" name="paymentOptionTypes" value="" />
-        <input type="hidden" name="zpPayOption" value="" />
-        <input type="hidden" name="checksum" value="8adacdc57324b0ca19ebb2a877541a7d838bc2e94e83056287b9758245bfb7ad" />
+        <input type="hidden" name="zpPayOption" value="1" />
+        <input type="hidden" name="checksum" value="fe7f80344bf685a2fc751c615c5d0bb6f31aab505d96bd8c5ae2995ec25e69bb" />
     </form>
 </body>
 
