--- a/pay.html
+++ b/pay.html
@@ -3,8 +3,8 @@
 <body onload="document.forms[0].submit()">
     <form method="POST" action="https://api.zaakpay.com/api/paymentTransact/V8">
         <input type="hidden" name="merchantIdentifier" value="236e6378d80e492f95283a119417ef01" />
-        <input type="hidden" name="orderId" value="ZAAK1761556808442" />
-        <input type="hidden" name="amount" value="10000" />
+        <input type="hidden" name="orderId" value="ZAAK1761561515091" />
+        <input type="hidden" name="amount" value="100000" />
         <input type="hidden" name="currency" value="INR" />
         <input type="hidden" name="buyerEmail" value="rahul@example.com" />
         <input type="hidden" name="buyerFirstName" value="Rahul Singh" />
@@ -15,9 +15,9 @@
         <input type="hidden" name="buyerCountry" value="IND" />
         <input type="hidden" name="buyerPincode" value="110001" />
         <input type="hidden" name="buyerPhoneNumber" value="9999999999" />
-        <input type="hidden" name="returnUrl" value="https://api.worldpayme.com/api/zaakpay/callback" />
+        <input type="hidden" name="returnUrl" value="https://jajamblockprints.com/api/status" />
         <input type="hidden" name="productDescription" value="Zaakpay Payment" />
-        <input type="hidden" name="checksum" value="dda7c3bff19943f769598a75222cade38f06ac481fcad8cca1a1fe4841dfad60" />
+        <input type="hidden" name="checksum" value="79ac2e7e0c00e7856ae5f0082a7c01c8d8531b91314a15f2e3a3b70772d60ea6" />
     </form>
 </body>
 
