--- a/pay.html
+++ b/pay.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirecting to Zaakpay...</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      text-align: center;
+      background-color: #fafafa;
+      padding-top: 100px;
+    }
+    .loader {
+      margin: 30px auto;
+      border: 4px solid #ccc;
+      border-top: 4px solid #007bff;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
 </head>
+
 <body onload="document.forms['zaakpayForm'].submit();">
-  <h3>Redirecting to Payment Gateway, please wait...</h3>
+  <h2>Redirecting to Payment Gateway...</h2>
+  <p>Please wait while we securely process your payment.</p>
+  <div class="loader"></div>
 
   <form
     name="zaakpayForm"
